@@ -18,4 +18,6 @@ agent:
 # context settings
 # the context is used by agents for storing their state.
 context:
-  class: com.almende.eve.context.MemoryContextFactory
+  # class: com.almende.eve.context.MemoryContextFactory
+  class: com.almende.eve.context.FileContextFactory
+  path: .eveagents
