@@ -5,6 +5,25 @@ import com.almende.eve.context.Context;
 import com.almende.eve.context.ContextFactory;
 import com.google.appengine.api.utils.SystemProperty;
 
+/**
+ * @class DatastoreContextFactory
+ * 
+ * Factory for instantiating a DatastoreContext for an Eve Agent.
+ * 
+ * The context provides general information for the agent (about itself,
+ * the environment, and the system configuration), and the agent can store its 
+ * state in the context. 
+ * The context extends a standard Java Map.
+ * 
+ * Usage:<br>
+ *     ContextFactory factory = new DatastoreContextFactory();<br>
+ *     factory.setConfig(config);<br>
+ *     Context context = factory.getContext("MyAgentClass", "agentId");<br>
+ *     Agent agent = new MyAgentClass();
+ *     agent.setContext(context);
+ * 
+ * @author jos
+ */
 public class DatastoreContextFactory implements ContextFactory {
 	private Config config = null;
 	private String servletUrl = null;
