@@ -19,3 +19,5 @@ agent:
 # the context is used by agents for storing their state.
 context:
   class: com.almende.eve.context.google.DatastoreContextFactory
+  # class: com.almende.eve.context.FileContextFactory
+  # class: com.almende.eve.context.MemoryContextFactory
