@@ -17,4 +17,6 @@ agent:
 # context settings
 # the context is used by agents for storing their state.
 context:
-  class: com.almende.eve.context.MemoryContextFactory
+  class: com.almende.eve.context.FileContextFactory
+  # class: com.almende.eve.context.MemoryContextFactory
+  
