@@ -24,6 +24,8 @@ agent:
 # the context is used by agents for storing their state.
 context:
   class: com.almende.eve.context.google.DatastoreContextFactory
+  # class: com.almende.eve.context.FileContextFactory
+  # class: com.almende.eve.context.MemoryContextFactory
 
 # Google API access
 google:
