@@ -3,7 +3,10 @@ http://almende.github.com/eve/
 
 <not yet released>, version 0.5
 
-- Slight changes in the context
+- Updated the context to reflect changes in EveCore
+- DatastoreContext now stores one entity per agent, instead of one per 
+  parameter. It remains to be seen what works more efficient from a Datastore
+  point of view.
 
 
 2012-06-08, version 0.4
